# backend/src/routes/products-routes.ts
@@ -1,8 +1,9 @@
 import { Router } from 'express';
-import { listProducts } from '../controllers/products-controller';
+import { getProductById, listProducts } from '../controllers/products-controller';
 
 const router = Router();
 
 router.get('/', listProducts);
+router.get('/:productId', getProductById);
 
 export default router;
